--- a/pizza_caballero.html
+++ b/pizza_caballero.html
@@ -123,7 +123,7 @@
 	<div class="row">
 		<div class="leftcolumn">
 			<div class="card">
-				<div class="fakeimg" style="height:726px;"><img src="img/pizza1.jpg" alt="pizza" height="700px" width="840px"></div>
+				<div class="fakeimg" style="height:726px;"><img src="pizza1.jpg" alt="pizza" height="700px" width="840px"></div>
 					<p>¡Haz tu pedido con nosotros!</p>
 					<p>En tiempo, calidad y excelente sabor... ¡Solo nosotros somos los mejores!</p> 
 				</div> 
@@ -132,14 +132,14 @@
 			<div class="card">
 				<h2>Nosotros</h2>
 				<div class="fakeimg" style="height: 100px;">
-					<img src="img/logopizza.png" alt="pizza" height="80px" width="200px">				</div> 
+					<img src="logopizza.png" alt="pizza" height="80px" width="200px">				</div> 
 				<p>Somos una empresa 100% jarocha, creada por una universitaria</p> 
 			</div> 
 
 			<div class="card1">
 				<div class="fakeimg">
 					<a href="https://www.mercadolibre.com.mx/">
-						<img src="img/mercadolibre.jpg" alt="mercadolibre" height="308px" width="250px">
+						<img src="mercadolibre.jpg" alt="mercadolibre" height="308px" width="250px">
 					</a>
 				</div>
 			</div>
