--- a/menupizza_caballero.html
+++ b/menupizza_caballero.html
@@ -146,29 +146,29 @@
 			<div class="card">
 				<div class="fakeimg" style="height:730px;">
 					<a href="pedidos_caballero">
-					<img src="img/menu.jpg" alt="pizza" height="700px" width="840px"></a>
+					<img src="menu.jpg" alt="pizza" height="700px" width="840px"></a>
 				</div>
-					<p><a href="pagina_de_pedidos.html" class="button">¡Quiero pedir!</a></p>
+					<p><a href="pedidos_caballero.html" class="button">¡Quiero pedir!</a></p>
 				</div> 
 		</div>
 		<div class="rightcolumn">
 			<div class="card2">
 				<div class="fakeimg1">
 					<a href="pedidos_caballero">
-					<img src="img/helado.jpg" alt="helado" height="260px" width="200px"></a>
+					<img src="helado.jpg" alt="helado" height="260px" width="200px"></a>
 				</div>
 			</div> 
 
 			<div class="card2">
 				<div class="fakeimg1">
 					<a href="pedidos_caballero"></a>
-					<img src="img/bebidas.jpg" alt="bebidas" height="260px" width="200px"></a>
+					<img src="bebidas.jpg" alt="bebidas" height="260px" width="200px"></a>
 				</div>
 			</div>
 			<div class="card2">
 				<div class="fakeimg1">
 					<a href="pedidos_caballero">
-					<img src="img/extras.jpg" alt="extras" height="255px" width="200px"></a>
+					<img src="extras.jpg" alt="extras" height="255px" width="200px"></a>
 				</div>
 			</div>
 		</div>
