--- a/promociones_caballero.html
+++ b/promociones_caballero.html
@@ -134,21 +134,21 @@
 	<div class="row">
 		<div class="leftcolumn">
 			<div class="card">
-				<div class="fakeimg" style="height:730px;"><img src="img/promo.jpg" alt="pizza" height="700px" width="840px"></div>
+				<div class="fakeimg" style="height:730px;"><img src="promo.jpg" alt="pizza" height="700px" width="840px"></div>
 					<p><a href="pedidos_caballero.html" class="button">¡Quiero pedir!</a></p>
 				</div> 
 		</div>
 		<div class="rightcolumn">
 			<div class="card">
 				<h2>Sabías qué...?</h2>
-				<div class="fakeimg" style="height: 100px;"><img src="img/gato.jpg" alt="pizza" height="80px" width="150px"></div> 
+				<div class="fakeimg" style="height: 100px;"><img src="gato.jpg" alt="pizza" height="80px" width="150px"></div> 
 				<p>¡Los gatos no pueden consumir pizzaaa!</p> 
 			</div> 
 
 			<div class="card1">
 				<div class="fakeimg">
 					<a href="https://www.amazon.com.mx/">
-					<img src="img/amazon.jpg" alt="amazon" height="308px" width="250px"></a>
+					<img src="amazon.jpg" alt="amazon" height="308px" width="250px"></a>
 				</div>
 			</div>
 			<div class="card">
