--- a/pedidos_caballero.html
+++ b/pedidos_caballero.html
@@ -172,14 +172,14 @@
 			<div class="card">
 				<p>
         			<a href="domicilio_caballero.html" class="button">
-            		<img src="img/repartidor.png" alt="Entrega a domicilio" width="200px" height="200px">
+            		<img src="repartidor.png" alt="Entrega a domicilio" width="200px" height="200px">
             		<br><strong>A Domicilio</strong>
         			</a>
     			</p>
 
     			<p>
         			<a href="tienda_caballero.html" class="button">
-            		<img src="img/sucursal.png" alt="En tienda" width="200px" height="200px">
+            		<img src="sucursal.png" alt="En tienda" width="200px" height="200px">
             		<br><strong>En Tienda</strong>
         			</a>
    				</p>
@@ -188,7 +188,7 @@
 	<div class="rightcolumn">
 			<div class="card">
 				<h2>Sabías qué...?</h2>
-				<div class="fakeimg" style="height: 100px;"><img src="img/ventalinea.jpg" alt="pizza" height="100px" width="150px"></div> 
+				<div class="fakeimg" style="height: 100px;"><img src="ventalinea.jpg" alt="pizza" height="100px" width="150px"></div> 
 				<p>¡La pizza fue una de las primeras cosas que se vendieron por internet en los años 90!</p> 
 			</div> 
 		
