--- a/tienda_caballero.html
+++ b/tienda_caballero.html
@@ -226,14 +226,14 @@
 	<div class="rightcolumn">
 			<div class="card">
 				<h2>Sabías qué...?</h2>
-				<div class="fakeimg" style="height: 100px;"><img src="img/personacomiendo.png" alt="pizza" height="80px" width="200px"></div> 
+				<div class="fakeimg" style="height: 100px;"><img src="personacomiendo.png" alt="pizza" height="80px" width="200px"></div> 
 				<p>¡México es el segundo país en el mundo que más pizza consume!</p> 
 			</div> 
 
 			<div class="card1">
 				<div class="fakeimg">
 					<a href="https://www.apple.com/mx/iphone/">
-					<img src="img/iphone.jpeg" alt="iphone" height="300px" width="250px"></a>
+					<img src="iphone.jpeg" alt="iphone" height="300px" width="250px"></a>
 				</div>
 			</div>
 		
