--- a/domicilio_caballero.html
+++ b/domicilio_caballero.html
@@ -236,14 +236,14 @@
 	<div class="rightcolumn">
 			<div class="card">
 				<h2>Sabías qué...?</h2>
-				<div class="fakeimg" style="height: 100px;"><img src="img/personacomiendo.png" alt="pizza" height="80px" width="200px"></div> 
+				<div class="fakeimg" style="height: 100px;"><img src="personacomiendo.png" alt="pizza" height="80px" width="200px"></div> 
 				<p>¡México es el segundo país en el mundo que más pizza consume!</p> 
 			</div> 
 
 			<div class="card1">
 				<div class="fakeimg">
 					<a href="https://www.netflix.com/mx/">
-					<img src="img/netflix.jpg" alt="netflix" height="450px" width="250px"></a>
+					<img src="netflix.jpg" alt="netflix" height="450px" width="250px"></a>
 
 				</div>
 			</div>
