--- a/finalpedido_caballero.html
+++ b/finalpedido_caballero.html
@@ -167,14 +167,14 @@
 			<div class="card">
         		<h1 class="a">¡Gracias por tu pedido, te notificaremos cuando esté listo!</h1>
         		<div class="fakeimg" style="height:726px;">
-        			<img src="final.jpg" alt="pizza" height="700px" width="840px">
+        			<img src="final.jpg" alt="final" height="700px" width="840px">
         		</div>
 		</div>
 	</div>
 	<div class="rightcolumn">
 			<div class="card">
 				<h2>Sabías qué...?</h2>
-				<div class="fakeimg" style="height: 100px;"><img src="personacomiendo.png" alt="pizza" height="80px" width="200px"></div> 
+				<div class="fakeimg" style="height: 100px;"><img src="personacomiendo.png" alt="personacomiendo" height="80px" width="200px"></div> 
 				<p>¡México es el segundo país en el mundo que más pizza consume!</p> 
 			</div> 
 			<div class="card1">
