--- a/menupizza_caballero.html
+++ b/menupizza_caballero.html
@@ -146,7 +146,7 @@
 			<div class="card">
 				<div class="fakeimg" style="height:730px;">
 					<a href="pedidos_caballero">
-					<img src="menu.jpg" alt="pizza" height="700px" width="840px"></a>
+					<img src="menu.jpg" alt="pizza" height="100%" width="100%"></a>
 				</div>
 					<p><a href="pedidos_caballero.html" class="button">¡Quiero pedir!</a></p>
 				</div> 
