--- a/promociones_caballero.html
+++ b/promociones_caballero.html
@@ -134,7 +134,7 @@
 	<div class="row">
 		<div class="leftcolumn">
 			<div class="card">
-				<div class="fakeimg" style="height:730px;"><img src="promo.jpg" alt="pizza" height="700px" width="840px"></div>
+				<div class="fakeimg" style="height:730px;"><img src="promo.jpg" alt="pizza" height="100%" width="100%"></div>
 					<p><a href="pedidos_caballero.html" class="button">¡Quiero pedir!</a></p>
 				</div> 
 		</div>
