--- a/finalpedido_caballero.html
+++ b/finalpedido_caballero.html
@@ -167,7 +167,7 @@
 			<div class="card">
         		<h1 class="a">¡Gracias por tu pedido, te notificaremos cuando esté listo!</h1>
         		<div class="fakeimg" style="height:726px;">
-        			<img src="final.jpg" alt="final" height="700px" width="840px">
+        			<img src="final.jpg" alt="final" height="100%" width="100%">
         		</div>
 		</div>
 	</div>
