--- a/finalpedido_caballero.html
+++ b/finalpedido_caballero.html
@@ -179,8 +179,8 @@
 			</div> 
 			<div class="card1">
 				<div class="fakeimg">
-					<a href="https://www.netflix.com/mx/"></a>
-					<img src="netflix.jpg" alt="netflix" height="300px" width="250px">
+					<a href="https://www.netflix.com/mx/">
+					<img src="netflix.jpg" alt="netflix" height="300px" width="250px"></a>
 				</div>
 			</div>
 		
