--- a/menupizza_caballero.html
+++ b/menupizza_caballero.html
@@ -132,8 +132,8 @@
 </head>
 <body>
 	<div class="header">
-		<h1>Menú</h1>
-		<p>¡Busca tu pizza perdida en nuestra sucursal!</p>
+		<h1>Pizzería "La Rebanada Perdida"</h1>
+		<p>¡Busca tu rebanada perdida en nuestra sucursal!</p>
 	</div>
 	<div class="topnav">
 		<a href="menupizza_caballero.html">Menú</a> 
