--- a/finalpedido_caballero.html
+++ b/finalpedido_caballero.html
@@ -153,8 +153,8 @@
     </head>
 <body>
     <div class="header">
-		<h1>Pedidos</h1>
-		<p>¿Buscas tu pizza perdida más económica? Aprovecha nuestras promociones</p>
+		<h1>Pizzería "La Rebanada Perdida"</h1>
+		<p>¡Busca tu rebanada perdida en nuestra sucursal!</p>
 	</div>
 	<div class="topnav">
 		<a href="menupizza_caballero.html">Menú</a> 
