--- a/domicilio_caballero.html
+++ b/domicilio_caballero.html
@@ -159,9 +159,9 @@
     </style>
     </head>
 <body>
-    <div class="header">
-		<h1>Pedidos</h1>
-		<p>¿Buscas tu pizza perdida más económica? Aprovecha nuestras promociones</p>
+   <div class="header">
+		<h1>Pizzería "La Rebanada Perdida"</h1>
+		<p>¡Busca tu rebanada perdida en nuestra sucursal!</p>
 	</div>
 	<div class="topnav">
 		<a href="menupizza_caballero.html">Menú</a> 
